--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Frontend Mentor | Advice generator app</title>
+    <title>Advice generator app</title>
   </head>
   <body>
     <div class="advice-card">
